# pdf-extractor

./: .gitignore  AGENTS.md  README.md  extraccion.py  extractors.py  gui.py  main.py  pyproject.toml  territorios.py
.github/workflows/: ci.yml  release.yml
artifacts/validation/: latest_report.csv  latest_report.json
conductor/: refactor-to-clean-arch.md
scripts/: annotate_pdfs.py  build_pyinstaller.py  validate_pdfs.py
src/app/services/: pdf_validation_service.py
src/app/use_cases/: process_pdf.py
src/domain/: constants.py
src/domain/errors/: domain_errors.py
src/domain/interfaces/: extraction_interfaces.py  territories_repository.py
src/domain/models/: annotation_options.py  extracted_data.py  validation_result.py
src/domain/services/: transform_data.py
src/infrastructure/excel/: excel_exporter_openpyxl.py
src/infrastructure/pdf/: cargo_parser.py  organ_extractor.py  organ_patterns.py  organ_selector.py  paragraph_splitter.py  parse_debug.py  parse_models.py  participant_parser.py  pdf_annotator_pymupdf.py  pdf_extractor_pymupdf.py  row_parser.py  text_cleaner.py
src/infrastructure/persistence/: territories_repository_json.py
src/presentation/gui/: main_window.py
tests/app/: test_process_pdf.py
tests/domain/: test_transform_data.py
tests/fixtures/: boe_header_sample.md  boe_paragraphs_sample.md
tests/infrastructure/pdf/: test_organ_extractor.py  test_organ_patterns.py  test_paragraph_splitter.py  test_real_boe_patterns.py  test_row_parser.py  (+1 more)
tests/regression/: test_current_baseline_summary.py  test_pdf_regression.py
(+18 files in other folders)
